# rust_app_cpp_dll

./: build.bat  run.bat
cpp_dll/: build.bat
cpp_dll/src/: main.cpp
rust_app/: Cargo.toml  build.bat
rust_app/src/: main.rs
