[package]
name = "rust_app_cpp_dll"
version = "0.1.0"
authors = ["Ryan Wooley"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "*"

#[target.i686-pc-windows-msvc.cpplib]
#rustc-link-lib = ["cpplib"]
#rustc-link-search = ["../cpp_dll/bin/"]

#[build]
#target = "i686-pc-windows-msvc"